--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ LIST( APPEND CMAKE_MODULE_PATH ${miniqbtTests_SOURCE_DIR}/cmake )
 include(externalCatch)
 
 add_library(Catch INTERFACE)
-
+find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 
 SET(srcfiles 
@@ -19,9 +19,9 @@ SET(srcfiles
 
 
 include_directories(${CATCH_INCLUDE_DIR} ${COMMON_INCLUDES})
-include_directories(../lib/include)
+include_directories(../lib)
 add_executable(testMiniQbt ${srcfiles})
-target_link_libraries(testMiniQbt miniQbtruntime)
+target_link_libraries(testMiniQbt Eigen3::Eigen)
 
 add_custom_target(tests
     COMMAND testMiniQbt
