--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.7)
 project(runtimeMiniQbt)
 set (CMAKE_CXX_STANDARD 14)
-
+set(CMAKE_C_FLAGS_RELEASE "-O3")
 
 
 SET(srcfiles 
