--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 include_directories(../lib)
 add_executable(miniQbt ${srcfiles})
 target_link_libraries(miniQbt  Eigen3::Eigen)
-
+install(TARGETS miniQbt DESTINATION "${miniqbt_destination}")
 
 
 add_custom_target(run
