--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -6,15 +6,21 @@ set(CMAKE_C_FLAGS_RELEASE "-O3")
 
 SET(srcfiles 
     Main.cpp
-    TokenReaders.cpp
-    Tokens.cpp
-    TokenVisitor.cpp
     )
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
-include_directories(../lib)
+
+include_directories(
+    ../lib/MiniQbtEmulator 
+    ../lib/QasmIntepreter/include
+)
+
+
+
 add_executable(miniQbt ${srcfiles})
-target_link_libraries(miniQbt  Eigen3::Eigen)
+target_link_libraries(miniQbt  Eigen3::Eigen QasmIntepreter)
+
+
 install(TARGETS miniQbt DESTINATION "${miniqbt_destination}")
 
 
