--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include(externalCatch)
 SET(miniqbt_destination "bin")
 SET(miniqbt_lib_destination "lib")
 
+add_subdirectory(lib)
 add_subdirectory(runtime)
 add_subdirectory(tests)
 
