Measurement is now correct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ add_subdirectory(runtime)
 add_subdirectory(tests)
 
 enable_testing()
-add_test(NAME testMiniQbt COMMAND testMiniQbt)
+add_test(NAME testMiniQbt COMMAND emulatorTests)
