--- a/lib/QasmIntepreter/CMakeLists.txt
+++ b/lib/QasmIntepreter/CMakeLists.txt
@@ -9,7 +9,9 @@ SET(LIB_SOURCES
     src/ClassicRegister.cpp
 )
 
-include_directories(${miniQbt_SOURCE_DIR}/QasmIntepreter/include)
+
+
+#include_directories(${miniQbt_SOURCE_DIR}/QasmIntepreter/include)
 set(LIBRARY_NAME QasmIntepreter)
 add_library(${LIBRARY_NAME} STATIC ${LIB_SOURCES})
 target_link_libraries(${LIBRARY_NAME} Eigen3::Eigen)
