--- a/tests/Emulator/CMakeLists.txt
+++ b/tests/Emulator/CMakeLists.txt
@@ -13,8 +13,7 @@ SET(srcfiles
 )
 
 include_directories(
-    ../../lib/MiniQbtEmulator 
-    ../../lib/QasmIntepreter/include
+    ../../MiniQbt/include 
 )
 
 
