--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 3.5)
-project(runtimeMiniQbt)
+project(cliMiniQbt)
 set (CMAKE_CXX_STANDARD 14)
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 
