--- a/MiniQbt/CMakeLists.txt
+++ b/MiniQbt/CMakeLists.txt
@@ -1,14 +1,5 @@
 cmake_minimum_required (VERSION 3.5)
 set (CMAKE_CXX_STANDARD 14)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib") 
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-
-set(VERSION_MAJOR "0")
-set(VERSION_MINOR "2")
-set(VERSION_PATCH "0")
-set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
-
 PROJECT(miniQbt)
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
@@ -25,7 +16,21 @@ set(MINIQBT_INCLUDE_DIRS
     ${miniQbt_SOURCE_DIR}/include
 )
 
+set(PUBLIC_INCLUDES
+    ${miniQbt_SOURCE_DIR}/include/miniqbt/MiniQbt.hpp
+    ${miniQbt_SOURCE_DIR}/include/miniqbt/emulator/*.hpp
+    ${miniQbt_SOURCE_DIR}/include/miniqbt/emulator/tools/*.hpp
+    ${miniQbt_SOURCE_DIR}/include/miniqbt/intepreter/*.hpp
+)
+
 include_directories(${MINIQBT_INCLUDE_DIRS} )
 
-add_library(MiniQbt STATIC ${LIB_SOURCES})
+
+
+add_library(MiniQbt SHARED ${LIB_SOURCES})
 target_link_libraries(MiniQbt Eigen3::Eigen)
+
+install(TARGETS MiniQbt DESTINATION ${miniqbt_lib_destination} )
+install(FILES ${PUBLIC_INCLUDES} DESTINATION ${miniqbt_include_destination})
+
+add_subdirectory(tests)
