--- a/MiniQbt/tests/Emulator/CMakeLists.txt
+++ b/MiniQbt/tests/Emulator/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 3.5)
 project(emulatorTests)
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_CXX_STANDARD 14)
 
 SET(srcfiles 
@@ -26,3 +27,4 @@ add_custom_target(emulatorTest
     DEPENDS emulatorTests
     WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
+add_test(testEmulator emulatorTests)
