--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ include(externalCatch)
 SET(miniqbt_destination "bin")
 SET(miniqbt_lib_destination "lib")
 SET(miniqbt_include_destination "include")
-
+enable_testing ()
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 add_subdirectory(MiniQbt)
 add_subdirectory(cli)
 
