--- a/MiniQbt/tests/Emulator/CMakeLists.txt
+++ b/MiniQbt/tests/Emulator/CMakeLists.txt
@@ -1,16 +1,17 @@
 cmake_minimum_required (VERSION 3.5)
 project(emulatorTests)
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_CXX_STANDARD 14)
 
 SET(srcfiles 
     Main.cpp
     HadamardTest.cpp
-    GroverTests.cpp
-    ShorTests.cpp
-    SingleQubitTests.cpp
-    BasicCircuits.cpp
-    learningParity.cpp
+    quantum_algorithms/GroverTests.cpp
+    quantum_algorithms/ShorTests.cpp
+    the_weird_and_wonderfull_world_of_the_qubit/SingleQubitTests.cpp
+    quantum_algorithms/BasicCircuits.cpp
+    quantum_algorithms/learningParity.cpp
+    multiple_qubits_gates_and_entangled_states/BellTests.cpp
+    multiple_qubits_gates_and_entangled_states/GHZStates.cpp
 )
 
 include_directories(
@@ -22,10 +23,4 @@ include_directories(${CATCH_INCLUDE_DIR} ${COMMON_INCLUDES})
 add_executable(emulatorTests ${srcfiles})
 target_link_libraries(emulatorTests Eigen3::Eigen)
 
-add_custom_target(emulatorTest
-    COMMAND emulatorTests
-    DEPENDS emulatorTests
-    WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
-)
-enable_testing()
-add_test(testEmulator emulatorTests)
+add_test(NAME testEmulator COMMAND ${CMAKE_CURRENT_BINARY_DIR}/emulatorTests)
