Started with python wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,5 @@ enable_testing ()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 add_subdirectory(MiniQbt)
 add_subdirectory(cli)
+add_subdirectory(PyMiniQbt)
 
