--- a/examples/cpp/cli/CMakeLists.txt
+++ b/examples/cpp/cli/CMakeLists.txt
@@ -9,22 +9,8 @@ SET(srcfiles
     )
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
-
-include_directories(
-    ../modules/core/include
-)
-
-#include_directories( ${miniQbt_INCLUDE_DIRS} )
+#find_package(MiniQbt REQUIRED NO_MODULE)
 
 add_executable(miniQbt ${srcfiles})
 target_link_libraries(miniQbt  Eigen3::Eigen MiniQbt)
 
-
-install(TARGETS miniQbt DESTINATION "${miniqbt_destination}")
-
-
-add_custom_target(run
-    COMMAND miniQbt
-    DEPENDS miniQbt
-    WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
-)
