--- a/modules/core/cmake/MiniQbt.hpp.in
+++ b/modules/core/cmake/MiniQbt.hpp.in
@@ -5,8 +5,8 @@
 #include "miniqbt/intepreter/QasmAsyncIntepreter.hpp"
 
 namespace MiniQbt{
-    constexpr char VERSION[] = "0.4.0";
-    constexpr char NAME[] = "MiniQbt";
+    constexpr char VERSION[] = "${miniQbt_version}";
+    constexpr char NAME[] = "${miniQbt_name}";
 }
 
 #endif
