--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT(MiniQbt VERSION ${miniQbt_version})
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
+ADD_DEFINITIONS( "-g -Wall -fPIC" )
 SET(LIB_SOURCES 
     src/QasmAsyncIntepreter.cpp
     src/Tokens.cpp
@@ -22,6 +23,7 @@ include_directories(${MINIQBT_INCLUDE_DIRS} )
 
 
 add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES})
+#add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES})
 target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
 
 
@@ -46,7 +48,7 @@ foreach(p LIB BIN INCLUDE CMAKE)
 endforeach()
 
 #setup tests
-add_subdirectory(tests)
+#add_subdirectory(tests)
 
 
 
