--- a/modules/python/CMakeLists.txt
+++ b/modules/python/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required (VERSION 3.5)
 project(PyMiniQbt)
-find_program(PYTHON "python3")
-find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+set (
+	python_version 3.5.0
+)
+find_package(PythonInterp ${python_version} REQUIRED)
+find_package(PythonLibs ${python_version} REQUIRED)
+find_package (Eigen3 3.3 NO_MODULE)
 
-if (PYTHON)
+if (PythonInterp)
     set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py")
     set(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
     set(OUTPUT      "${CMAKE_CURRENT_BINARY_DIR}/build")
@@ -13,22 +17,26 @@ if (PYTHON)
       ${CMAKE_CURRENT_SOURCE_DIR}/MiniQbt.cpp
     )
 
-    set(
-      PyMiniQbt_EIGEN_INCLUDE_LIB
-      ${EIGEN3_INCLUDE_DIR}
-    )
-    
-    set(
-      PyMiniQbt_LIB
-      MiniQbt
-    )
+	if(WIN32)
+		set(
+			PyMiniQbt_LIB
+			${MiniQbt_BINARY_DIR}/x64/Debug
+		)
+	else()
+		set(
+			PyMiniQbt_LIB
+			${MiniQbt_BINARY_DIR}
+		)
+	endif()
+	
+
 
     configure_file(${SETUP_PY_IN} ${SETUP_PY})
 
     add_custom_command(OUTPUT ${OUTPUT}
                        COMMAND ${PYTHON} ${SETUP_PY} build
                        COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT}
-                       DEPENDS ${DEPS})
+                       DEPENDS cmd)
 
     add_custom_target(PyMiniQbt ALL DEPENDS ${OUTPUT})
 
