--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -22,9 +22,8 @@ set(MINIQBT_INCLUDE_DIRS ${MiniQbt_SOURCE_DIR}/include/ ${CMAKE_CURRENT_BINARY_D
 include_directories(${MINIQBT_INCLUDE_DIRS} )
 
 
-add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES})
+add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES})
 target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
-
 
 
 configure_file(
@@ -47,7 +46,7 @@ foreach(p LIB BIN INCLUDE CMAKE)
 endforeach()
 
 #setup tests
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
 
 
