Updated cli example

--- a/modules/core/tests/IntepreterTests/CMakeLists.txt
+++ b/modules/core/tests/IntepreterTests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.5)
 project(IntepreterTests)
 set (CMAKE_CXX_STANDARD 14)
-
+find_library(MiniQbt REQUIRED)
 SET(srcfiles 
     Main.cpp
     SimpleAsyncTests.cpp
