Fixed type :/ and added contributing

--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 
 SET(LIB_SOURCES 
-    src/QasmAsyncIntepreter.cpp
+    src/QasmAsyncInterpreter.cpp
     src/Tokens.cpp
     src/TokenVisitor.cpp
     src/TokenParser.cpp
