--- a/modules/core/tests/CMakeLists.txt
+++ b/modules/core/tests/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(Catch INTERFACE)
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 add_subdirectory(Emulator)
-add_subdirectory(IntepreterTests)
+add_subdirectory(InterpreterTests)
