--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: cpp
+os: osx
 compiler:
     - gcc
     - clang
 
 before_install:
     - sudo apt update -y
+    - sudo apt install libpython3-all-dev    
     # Install Eigen3
     - git clone https://github.com/eigenteam/eigen-git-mirror.git
     - cd eigen-git-mirror/
