--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ compiler:
 before_install:
 #    - sudo apt update -y
 #    - sudo apt install libpython3-all-dev    
+    - brew update
+    - brew instll python3
     # Install Eigen3
     - git clone https://github.com/eigenteam/eigen-git-mirror.git
     - cd eigen-git-mirror/
