--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 #    - sudo apt update -y
 #    - sudo apt install libpython3-all-dev    
     - brew update
-    - brew instll python3
+    - brew install python3
     # Install Eigen3
     - git clone https://github.com/eigenteam/eigen-git-mirror.git
     - cd eigen-git-mirror/
