--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ compiler:
 before_install:
 #    - sudo apt update -y
 #    - sudo apt install libpython3-all-dev    
-    - brew update
-    - brew upgrade python
+    #- brew update
+    #- brew upgrade python
     # Install Eigen3
     - git clone https://github.com/eigenteam/eigen-git-mirror.git
     - cd eigen-git-mirror/
