--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(miniQbt)
 LIST( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
 OPTION(ENABLE_TESTS "Enable unit tests" OFF)
-OPTION(ENABLE_JAVA "Enable building for java" ON)
+OPTION(ENABLE_JAVA "Enable building for java" OFF)
 OPTION(ENABLE_PYTHON "Enable building for python" OFF)
 
 IF(ENABLE_TESTS)
