--- a/modules/java/javaNativeMiniQbt/CMakeLists.txt
+++ b/modules/java/javaNativeMiniQbt/CMakeLists.txt
@@ -18,7 +18,10 @@ SET(NATIVE_HEADERS
     ${JavaNativeMiniQbt_SOURCE_DIR}/include
 )
 
-include_directories(${JNI_INCLUDE_DIRS} ${NATIVE_HEADERS} )
+include_directories(
+    ${JNI_INCLUDE_DIRS} 
+    ${NATIVE_HEADERS}
+)
 add_library(${JAVA_NATIVE_LIB_NAME} SHARED ${NATIVE_LIB_SOURCES})
 
 target_link_libraries(${JAVA_NATIVE_LIB_NAME} ${JNI_LIBRARIES} Eigen3::Eigen )
