Now an error when the buildsettings are not properly set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,28 @@
 cmake_minimum_required (VERSION 3.5)
 project(miniQbt)
 
+
+IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+    # Check if you're in the root directory of the project, and give an error.
+    MESSAGE(FATAL_ERROR "Please create a dedicated build directory for MiniQbt. (You may need remove the CmakeCache.txt and the cache)")
+ENDIF()
+
+
 LIST( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
+
+OPTION(ENABLE_EMSCRIPTEN "Enable Emscripten" ON)
 
 OPTION(ENABLE_TESTS "Enable unit tests" OFF)
 OPTION(ENABLE_JAVA "Enable building for java" OFF)
 OPTION(ENABLE_PYTHON "Enable building for python" OFF)
-OPTION(ENABLE_EMSCRIPTEN "Enable Emscripten" ON)
+
+IF(ENABLE_EMSCRIPTEN)
+    # Disable the unit test and wrappers when building for EMSCRIPTEN
+    IF(ENABLE_TESTS OR ENABLE_JAVA OR ENABLE_PYTHON)
+        MESSAGE(FATAL_ERROR "You can't build the python/java bindings or perform unit tests while also using emscripten. Please check your settings")
+    ENDIF()
+
+ENDIF()
 
 
 IF(ENABLE_TESTS)
