bool vectors are quirky, that's why I made a class so it's more easy to port it to emscripten

--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(LIB_SOURCES
     src/Emscripten.cpp
     src/TokenParser.cpp
     src/ClassicRegister.cpp
+    src/QuantumResult.cpp
 )
 set(header_version_in ${MiniQbt_SOURCE_DIR}/cmake/MiniQbt.hpp.in)
 set(header_version_out ${CMAKE_CURRENT_BINARY_DIR}/include/miniqbt/MiniQbt.hpp)
