Currently made QuantumResult work on the Java bindings. Also made sure the name no longer shows miniqbt. but also states the platform it was build on.

--- a/modules/java/javaBindings/CMakeLists.txt
+++ b/modules/java/javaBindings/CMakeLists.txt
@@ -16,6 +16,7 @@ GET_DIRECTORY_PROPERTY(
 SET(JAVA_LIB_SOURCES
     ./src/Globals.java
     ./src/QasmAsyncInterpreter.java
+    ./src/QuantumResult.java
 )  
 
 
@@ -23,7 +24,6 @@ add_jar(
     jMiniQbt 
     SOURCES ${JAVA_LIB_SOURCES} 
    # ../../../build/modules/java/javaBindings/libJavaMiniQbtWrapper.solibJavaMiniQbtWrapper
-
     VERSION ${miniQbt_MAJOR_VERSION}.${miniQbt_MINOR_VERSION}.${miniQbt_PATCH_VERSION}
 )
 
