--- a/modules/java/javaNativeMiniQbt/CMakeLists.txt
+++ b/modules/java/javaNativeMiniQbt/CMakeLists.txt
@@ -4,6 +4,12 @@ project(JavaNativeMiniQbt)
 find_package(JNI REQUIRED)
 find_package (Eigen3 3.3 NO_MODULE)
 
+# Make sure we got the provided includes from miniqbt source
+GET_DIRECTORY_PROPERTY(
+    MINIQBT_INCLUDE_DIRS 
+    DIRECTORY ${CMAKE_SOURCE_DIR}/modules/core 
+    DEFINITION MINIQBT_INCLUDE_DIRS  
+)
 
 SET(NATIVE_LIB_SOURCES 
     ./src/MiniQbtGlobals.cpp
@@ -16,10 +22,12 @@ SET(JAVA_NATIVE_LIB_NAME
 
 SET(NATIVE_HEADERS
     ${JavaNativeMiniQbt_SOURCE_DIR}/include
+
 )
 
 include_directories(
     ${JNI_INCLUDE_DIRS} 
+    ${MINIQBT_INCLUDE_DIRS}
     ${NATIVE_HEADERS}
 )
 add_library(${JAVA_NATIVE_LIB_NAME} SHARED ${NATIVE_LIB_SOURCES})
