--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 before_script:
     - mkdir build
     - cd build
-    - cmake .. -DENABLE_TESTS=ON
+    - cmake .. -DENABLE_TESTS=ON -DENABLE_EMSCRIPTEN=OFF -DENABLE_PYTHON=OFF -DENABLE_JAVA=OFF
 
 script:
     - make
