Python conversion being done

--- a/modules/python/CMakeLists.txt
+++ b/modules/python/CMakeLists.txt
@@ -1,48 +1,27 @@
 cmake_minimum_required (VERSION 3.5)
 project(PyMiniQbt)
+set (CMAKE_CXX_STANDARD 14)
 set (
-	python_version 3.4.0
+	python_version 2.7.0
 )
+MESSAGE("Setting up python using ${python_version}")
+
+find_package(Boost 1.58 COMPONENTS python REQUIRED)
+
+
+
 find_package(PythonInterp ${python_version} REQUIRED)
 find_package(PythonLibs ${python_version} REQUIRED)
 find_package (Eigen3 3.3 NO_MODULE)
 
-if (PYTHONINTERP_FOUND)
-    set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py")
-    set(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
-    set(OUTPUT      "${CMAKE_CURRENT_BINARY_DIR}/build")
-   
-    set(
-      PyMiniQbt_SOURCE_FILES
-      ${CMAKE_CURRENT_SOURCE_DIR}/MiniQbt.cpp
-    )
+# Make sure we got the provided includes from miniqbt source
+GET_DIRECTORY_PROPERTY(
+    MINIQBT_INCLUDE_DIRS 
+    DIRECTORY ${CMAKE_SOURCE_DIR}/modules/core 
+    DEFINITION MINIQBT_INCLUDE_DIRS  
+)
 
-	if(WIN32)
-		set(
-			PyMiniQbt_LIB
-			${CMAKE_BINARY_DIR}/x64/Release
-		)
-	else()
-		set(
-			PyMiniQbt_LIB
-			${MiniQbt_BINARY_DIR}
-		)
-	endif()
-	
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${MINIQBT_INCLUDE_DIRS} )
+LINK_LIBRARIES(Eigen3::Eigen ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} MiniQbt)
+PYTHON_ADD_MODULE(PyMiniQbt src/PyMiniQbt.cpp)
 
-
-    configure_file(${SETUP_PY_IN} ${SETUP_PY})
-
-  add_custom_command(OUTPUT ${OUTPUT}
-                    COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} build
-                      COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT}
-                       )
-
-  add_custom_target(PyMiniQbt ALL DEPENDS ${OUTPUT})
-  IF(ENABLE_TESTS)
-    add_test(NAME pyNativeTests COMMAND ${PYTHON_EXECUTABLE} ${PyMiniQbt_SOURCE_DIR}/tests/native_tests_without_allocating.py)
-    add_test(NAME pyAbuseQasmTests COMMAND ${PYTHON_EXECUTABLE} ${PyMiniQbt_SOURCE_DIR}/tests/abuse_qasm_emulator_tests.py)
-    add_test(NAME pyThreadedTests COMMAND ${PYTHON_EXECUTABLE} ${PyMiniQbt_SOURCE_DIR}/tests/multi_threaded_tests.py)
-  ENDIF()
-  install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} install)")
-endif()
