--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,11 @@ ENDIF()
 
 LIST( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
-OPTION(ENABLE_EMSCRIPTEN "Enable Emscripten" ON)
+OPTION(ENABLE_EMSCRIPTEN "Enable Emscripten" OFF)
 
 OPTION(ENABLE_TESTS "Enable unit tests" OFF)
 OPTION(ENABLE_JAVA "Enable building for java" OFF)
-OPTION(ENABLE_PYTHON "Enable building for python" OFF)
+OPTION(ENABLE_PYTHON "Enable building for python" ON)
 
 SET (
     MINIQBT_PLATFORM_NAME ${CMAKE_SYSTEM_PROCESSOR}_${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_VERSION}
