--- a/modules/python/CMakeLists.txt
+++ b/modules/python/CMakeLists.txt
@@ -23,5 +23,12 @@ GET_DIRECTORY_PROPERTY(
 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${MINIQBT_INCLUDE_DIRS} )
 LINK_LIBRARIES(Eigen3::Eigen ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} MiniQbt)
+
 PYTHON_ADD_MODULE(PyMiniQbt src/PyMiniQbt.cpp)
 
+
+ADD_CUSTOM_COMMAND(
+    TARGET PyMiniQbt PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests $<TARGET_FILE_DIR:PyMiniQbt>
+)
